crates/compiler/tests/parse_errors/unicode_code.elm
module Main exposing (..)

x = "\u{110000}"
